fix(components): section spacing

--- a/components/section/style.css
+++ b/components/section/style.css
@@ -63,8 +63,8 @@
 }
 
 :host([image="bottom"]) {
-  --tcds-section-padding-top: 5rem;
-  --tcds-section-padding-bottom: 16rem;
+  --tcds-section-padding-top: 3rem;
+  --tcds-section-padding-bottom: 15rem;
 
   position: relative;
   display: grid;
